# odoo

./: .gitignore  HELPDESK_IMPROVEMENT_RECOMMENDATIONS.md  HELPDESK_INSTALLATION_STATUS.md  HELPDESK_KANBAN_COLOR_FIX.md  HELPDESK_PHASE1_FIXES_SUMMARY.md  HELPDESK_PRODUCTION_CHECKLIST.md  HELPDESK_PRODUCTION_READY.md  README.md
addons/helpdesk/setup/_metapackage/: pyproject.toml
base_accounting_kit/: __manifest__.py
custom_theme_onthisday/: COMPANY_SETTINGS_SUCCESS.md  CONSOLE_WARNINGS_EXPLANATION.md  DASHBOARD_IMPORT_EXPLANATION.md  DASHBOARD_ISSUE_SUMMARY.md  DASHBOARD_MIGRATION_GUIDE.md  DASHBOARD_TROUBLESHOOTING.md  FINAL_FIX_REPORT.md  FINAL_STATUS.md  FINAL_VERIFICATION.md  FIXED_ERROR_REPORT.md  FIX_DASHBOARD_DISPLAY.md  INSTALLATION_SUCCESS.md  INSTALL_INSTRUCTIONS.md  MULTI_COMPANY_DASHBOARD_FIX.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  README.md  SUCCESS_REPORT.md  SYSTEM_STATUS.md  TEST_RESULTS.md  THEME_COLOR_FIX.md  TROUBLESHOOTING.md  UPGRADE_INSTRUCTIONS.md  VERIFICATION_REPORT.md  __manifest__.py  rules_protect_core.mdc
docs/: ODOO19_GITOPS_DEPLOY.md
knowledge_onthisday_oca/: FIX_BROWSER_CACHE.md  PRODUCTION_READINESS.md  README.md  SUMMARY.md
otd_marketplace_stock/: AUTO_STOCK_SYNC_SETUP.md  CHECK_JOB_STATUS.md  DATABASE_CHECK_RESULT.md  ENABLE_TRACK_INVENTORY.md  ENABLE_TRACK_INVENTORY_FIX.md  FIX_OLD_JOBS.md  FIX_REDIRECT_URI.md  HOW_TO_GET_SHOP_ID.md  ODOO19_PRODUCT_TYPE.md  ODOO_STANDARDS_ANALYSIS.md  QUICK_SETUP.md  QUICK_TEST.md  README.md  __init__.py  (+43 more)
(+369 files in other folders)
