[project]
name = "odoo-addons-oca-helpdesk"
version = "18.0.20251015.0"
dependencies = [
    "odoo-addon-helpdesk_mgmt==18.0.*",
    "odoo-addon-helpdesk_mgmt_crm==18.0.*",
    "odoo-addon-helpdesk_mgmt_fieldservice==18.0.*",
    "odoo-addon-helpdesk_mgmt_fieldservice_equipment==18.0.*",
    "odoo-addon-helpdesk_mgmt_fieldservice_equipment_warranty==18.0.*",
    "odoo-addon-helpdesk_mgmt_fieldservice_project==18.0.*",
    "odoo-addon-helpdesk_mgmt_merge==18.0.*",
    "odoo-addon-helpdesk_mgmt_portal_follower==18.0.*",
    "odoo-addon-helpdesk_mgmt_project==18.0.*",
    "odoo-addon-helpdesk_mgmt_rating==18.0.*",
    "odoo-addon-helpdesk_mgmt_sale==18.0.*",
    "odoo-addon-helpdesk_mgmt_sale_project==18.0.*",
    "odoo-addon-helpdesk_mgmt_sla==18.0.*",
    "odoo-addon-helpdesk_mgmt_stage_validation==18.0.*",
    "odoo-addon-helpdesk_mgmt_timesheet==18.0.*",
    "odoo-addon-helpdesk_motive==18.0.*",
    "odoo-addon-helpdesk_portal_restriction==18.0.*",
    "odoo-addon-helpdesk_product==18.0.*",
    "odoo-addon-helpdesk_ticket_partner_response==18.0.*",
    "odoo-addon-helpdesk_ticket_related==18.0.*",
    "odoo-addon-helpdesk_type==18.0.*",
    "odoo-addon-helpdesk_type_sla==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
